--- a/public/js/templates/navbar.html
+++ b/public/js/templates/navbar.html
@@ -1,18 +1,15 @@
 <div class="container">
 	<div class="navbar-header">
 	  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-	    <span class="sr-only">Раскрыть меню</span>
+	    <span class="sr-only">Меню</span>
 	    <span class="icon-bar"></span>
 	    <span class="icon-bar"></span>
 	    <span class="icon-bar"></span>
 	  </button>
-	  <a class="navbar-brand" href="#"><i class="glyphicon glyphicon-phone-alt"></i>&nbsp;WebCDR</a>
+	  <a class="navbar-brand" href="#"><i class="glyphicon glyphicon-phone-alt"></i>&nbsp;Viola CDR</a>
 	</div>
 	<div class="collapse navbar-collapse">
 	  <ul class="nav navbar-nav js-list">
-	  </ul>
-	  <ul class="nav navbar-nav navbar-right">
-		<li><a href="/logout"><i class="glyphicon glyphicon-log-out"></i>&nbsp;Выход</a></li>
-	  </ul>
+	  </ul>	  
 	</div>
 </div>
