--- a/public/js/templates/navbar.html
+++ b/public/js/templates/navbar.html
@@ -6,7 +6,7 @@
 	    <span class="icon-bar"></span>
 	    <span class="icon-bar"></span>
 	  </button>
-	  <a class="navbar-brand" href="#"><i class="glyphicon glyphicon-phone-alt"></i>&nbsp;Viola CDR</a>
+	  <a class="navbar-brand" href="#">Ryo CDR</a>
 	</div>
 	<div class="collapse navbar-collapse">
 	  <ul class="nav navbar-nav js-list">
